<resources>
    <string name="app_name">Plane</string>
    <string name="input_name_hint">请输您的用户名</string>
    <string name="login_pwd">密码</string>
    <string name="register_pwd">注册密码</string>
    <string name="passengerMassage">乘客信息</string>
    <string name="passenger_name">乘客姓名</string>
    <string name="dingdan">订单</string>
    <string name="chaxun">查询</string>
    <string name="mine">我的</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uname_pwd_null_alert">用户名和密码不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="login_welcome">欢迎登录</string>
    <string name="username">用户名</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="uname_pwd_wrong">用户名或密码错误</string>
    <string name="http_fail">网络有点问题</string>
    <string name="register_user_exist">User Exists</string>
    <string name="change_pwd">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="joke">注册即同意我们的所有条款（其实我们就没有）</string>
    <string name="register_welcome">欢迎注册</string>
    <string name="add_contact">添加联系人</string>
    <string name="log_out">退出登录</string>
    <string name="user_not_login">当前用户未登录</string>
    <string name="not_complete">未完成</string>
    <string name="no_flight">没有航班</string>
    <string name="dest">TO</string>
    <string name="from">from</string>
    <string name="start_date">出发日期</string>
    <string name="search">搜索</string>
    <string name="search_title">机票预订</string>
    <string name="refresh">刷新</string>
<<<<<<< HEAD
    <string name="orderdetail">订单详情</string>
=======
    <string name="email">电子邮箱</string>
    <string name="phone_number">电话号码</string>
    <string name="name">姓名</string>
    <string name="add_contact_title">联系人信息</string>
    <string name="show_hide_pwd">显示/隐藏密码</string>
>>>>>>> 1092a3be2d1aef7f33b9ff17c0f3f439725bd6e9

</resources>
