<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.yeye.plane.activity.LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/login_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="46dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="8"
                android:ems="10"
                android:hint="@string/input_name_hint"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/login_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="8"
                android:ems="10"
                android:inputType="textPassword"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableLayout"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="73dp"
        android:text="@string/login"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tableLayout"
        android:layout_alignRight="@+id/tableLayout"
        android:layout_alignTop="@+id/login"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:text="@string/register"
        android:textSize="20sp"/>

</RelativeLayout>
