<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.yeye.plane.activity.ChangePwdActivity">

    <TextView
        android:id="@+id/change_pwd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right|center"
        android:layout_marginTop="20dp"
        android:text="@string/change_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/txt_old_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/change_pwd_title"
        android:layout_marginTop="38dp"
        android:text="@string/old_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/edit_old_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txt_old_pwd"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/txt_old_pwd"
        android:layout_toRightOf="@id/txt_old_pwd"
        android:ems="10"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/txt_new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_old_pwd"
        android:layout_marginTop="42dp"
        android:text="@string/new_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/edit_new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txt_new_pwd"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/txt_new_pwd"
        android:layout_toRightOf="@+id/txt_new_pwd"
        android:ems="10"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/txt_confirm_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txt_new_pwd"
        android:layout_marginTop="42dp"
        android:text="再次输入"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <EditText
        android:id="@+id/edit_confirm_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txt_confirm_pwd"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txt_confirm_pwd"
        android:layout_toRightOf="@+id/txt_confirm_pwd"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_confirm_pwd"
        android:layout_marginTop="42dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_reset"
        android:onClick="submit"
        android:text="@string/confirm"
        android:textSize="20sp"/>
</RelativeLayout>
